--- a/src/style.css
+++ b/src/style.css
@@ -8,8 +8,6 @@ h1 {
   text-align: left;
   font-family: "Suez One", serif;
   font-size: 64px;
-  line-height: 70px;
-
   font-family: "Catamaran", sans-serif;
   font-weight: 600;
 }
@@ -30,7 +28,6 @@ h3 {
   font-family: "Open Sans", sans-serif;
   font-size: 32px;
 }
-
 h3#current {
   text-align: left;
   line-height: 34px;
@@ -56,10 +53,22 @@ div.head {
   border: none;
 }
 div.input-group {
-  margin: 20px;
+  margin-top: 20px;
 }
 
 .card-text {
   text-align: center;
   font-size: 20px;
+}
+
+button.location {
+  display: block;
+  margin: 15px auto;
+  margin-right: 0px;
+  padding: 10px;
+  border-radius: 10px;
+  border: none;
+  background-color: rgb(252, 213, 39);
+  color: navy;
+  box-shadow: 3px 3px 2px rgba(0, 0, 0, 0.2);
 }
