added weather icon

--- a/src/style.css
+++ b/src/style.css
@@ -48,7 +48,7 @@ div.top {
 }
 div.head {
   padding: 50px;
-  background-image: url("https://images.unsplash.com/photo-1517685352821-92cf88aee5a5?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8Y2xvdWRzfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=400&q=60");
+  background-color: blanchedalmond;
   background-size: cover;
   border: none;
 }
