--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,15 @@
 body {
-  background-color: azure;
   font-family: "Open Sans", sans-serif;
+}
+
+.container {
+  background-color: azure;
+  margin: 0 auto;
+  padding: 20px;
+  padding-top: 0px;
+  border: none;
+  border-radius: 10px;
+  box-shadow: 5 5 5 rgba(0, 0, 0, 0.4);
 }
 
 h1 {
@@ -31,6 +40,12 @@ h3 {
 h3.weather {
   text-align: center;
   font-size: 24px;
+}
+
+h4 {
+  text-align: center;
+  font-family: "Open Sans", sans-serif;
+  font-size: 16px;
 }
 
 h5 {
@@ -76,4 +91,20 @@ a {
 }
 .active:hover {
   color: black;
+}
+
+.weather-forecast {
+  max-width: 600px;
+}
+
+#city-name {
+  text-align: left;
+  margin-bottom: 0;
+  line-height: 66px;
+}
+
+#current {
+  text-align: left;
+  font-size: 16px;
+  margin-bottom: 24px;
 }
