--- a/src/style.css
+++ b/src/style.css
@@ -2,9 +2,10 @@ body {
   font-family: "Open Sans", sans-serif;
 }
 
-.container {
-  background-color: azure;
-  margin: 0 auto;
+.weather-app {
+  background-color: #b9e6d3;
+  max-width: 600px;
+  margin: 20px auto 0 auto;
   padding: 20px;
   padding-top: 0px;
   border: none;
@@ -71,6 +72,10 @@ div.input-group {
   margin-top: 20px;
 }
 
+div.icon {
+  padding-bottom: 20px;
+}
+
 .card-text {
   text-align: center;
   font-size: 20px;
@@ -84,6 +89,11 @@ button.location {
 
 a {
   text-decoration: none;
+}
+
+small {
+  display: block;
+  text-align: center;
 }
 .active {
   cursor: default;
